--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,11 +8,9 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-    Open `_data/authors.yml` to edit this text.
+    This is Mushtaque Ahamed, a tech enthusiast hailing from Bangalore, India.
+    This is a tech blog to cherish some of best insights and thought I have had
+    exploring the realm of computation. Something for everyone here ... explore!
 
   # This photo will be used in the about section
   picture: /assets/img/logo.png
