--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ menu:
     url:               /tech/
   - title:             Math
     url:               /math/
-  - title:             Resume
+  - title:             Résumé
     url:               /resume/
   - title:             About
     url:               /about/
